Version 1.6.2+svn:
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Russian, Slovak

Version 1.6.2:
 * Campaigns:
   * Eastern Invasion:
     * Fixed the liches not being revealed properly in 'Weldyn Besieged'
   * Heir to the Throne:
     * The Scepter of Fire:
       * Enforce a 7-hex starting castle to prevent units from appearing inside
         a wall (bug #13377)
   * Under The Burning Suns:
     * Properly team-color caged merfolk (bug #13367)
   * Scepter of Fire:
     * Properly conditionalize some dialog (bug #13343)
 * Editor2:
   * Moved the clipboard actions to a context menu available in paste mode
   * Added a terrain sampler feature -- ctrl+click when in paint or fill mode 
   * Made "wesnoth -e FILE" work like "wesnoth -e --load FILE" (load the map)
   * Made "wesnoth -e --load DIR" (and consequently "wesnoth -e DIR") set
     DIR as the default map directory for the current session, and start with 
     the map load dialog open
   * Added ability to load maps referenced in scenario files
   * Added ability to work with maps embedded in scenario files (saving works 
     in a limited scope)
 * Graphics:
   * New portrait for Huntsman
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Chinese (Traditional), Czech,
      French, German, Hungarian, Icelandic, Indonesian, Italian, Lithuanian,
      Polish, Russian, Serbian, Slovak, Swedish
 * Miscellaneous and bugfixes:
   * Added --ignore-fatal-errors option to wmlunits
   * Fixed control transfer after player leaves MP game (bug #13238)
   * Fixed missing unit graphics when loading a start-of-scenario savegame
   * Improved the sorting of the XP and traits columns in the unit list dialog
     (part of bug #13360)
   * Enabled hinting for texts displayed by Pango/Cairo (bug #13399)
   * Enabled non-default fonts for Pango/Cairo (bug #13399)
   * Improve the 1.6.1 framerate optimization about images fiting in a hex
     (load and scan images only when needed)