@@ -6,6 +6,8 @@ Version 1.6.2+svn:
   * Language and translations
     * Updated translations: Chinese (Traditional), Russian, Slovak.
 
+  * User interface
+    * Fixed the MP password textbox handling of special characters.
 
 Version 1.6.2:
  * Campaigns
