@@ -1,6 +1,8 @@
 Version 1.6.2+svn:
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Russian, Slovak
+ * User interface:
+   * Fixed an multi-character UTF-8 handling bug in the password textbox
 
 Version 1.6.2:
  * Campaigns:
